fix banner spacing

--- a/scss/site/_custom-styles.scss
+++ b/scss/site/_custom-styles.scss
@@ -392,7 +392,7 @@
 }
 
 .prod-banner {
-   margin-bottom:rem-calc(30); 
+   margin-bottom:rem-calc(30)!important; 
 }
 .prod-wrap {
     h2 {
